# hauth

./: Dockerfile  README.md  hauth.cabal  hauth.yaml  stack.yaml
example/: Main.hs
hauth-bin/: Dockerfile  hauth-bin.cabal  hauth.yaml  stack.yaml
hauth-bin/src/client/: Main.hs
hauth-bin/src/server/: Main.hs
src/Network/: HAuth.hs
src/Network/HAuth/: Auth.hs  Consul.hs  DataStore.hs  Parse.hs  Postgres.hs  Types.hs  Wai.hs
src/Network/HAuth/DataStore/: Consul.hs  Memory.hs  Postgres.hs
src/Network/HAuth/Types/: Account.hs  Auth.hs  DataStore.hs  Internal.hs  JSON.hs  Secret.hs
tests/: Main.hs
