name:                hauth
version:             0.1.0
synopsis:            Header Authentication Library
description:         Hash-Based Message Authentication Code Library based on
                     OAuth2 & https://confluence.amgencss.fpcomplete.com/x/lwAQ
homepage:            http://github.com/fpco/hauth
license:             MIT
license-file:        LICENSE
author:              Tim Dysinger
maintainer:          tim@fpcomplete.com
copyright:           FP Complete
category:            Network
build-type:          Simple
cabal-version:       >=1.10

flag example
  description: enable example-hauth executable
  default:     False

library
  default-language:    Haskell2010
  exposed-modules:     Network.HAuth
                       Network.HAuth.Auth
                       Network.HAuth.Parse
                       Network.HAuth.Types
                       Network.HAuth.Types.Auth
                       Network.HAuth.Types.Secret
  hs-source-dirs:      src
  build-depends:       aeson
                     , attoparsec
                     , base >=4.7 && <5
                     , base16-bytestring
                     , byteable
                     , bytestring
                     , consul-haskell
                     , containers
                     , cryptohash
                     , enclosed-exceptions
                     , http-types
                     , lifted-base
                     , monad-control
                     , monad-logger
                     , mtl
                     , network
                     , persistent
                     , persistent-postgresql
                     , persistent-template
                     , resource-pool
                     , stm
                     , stm-containers
                     , text
                     , time
                     , transformers
                     , uuid
                     , void
                     , wai

test-suite test-hauth
  default-language:    Haskell2010
  hs-source-dirs:      tests
  main-is:             Main.hs
  type:                exitcode-stdio-1.0
  build-depends:       base >=4.7 && <5
                     , bytestring
                     , hauth
                     , hspec
                     , hspec-attoparsec
                     , tasty
                     , tasty-hspec

executable example-hauth
  if flag(example)
    buildable: True
  else
    buildable: False
  default-language:    Haskell2010
  hs-source-dirs:      example
  main-is:             Main.hs
  build-depends:       async
                     , base >=4.7 && <5
                     , bytestring
                     , consul-haskell
                     , hauth
                     , monad-control
                     , monad-logger
                     , network
                     , persistent
                     , persistent-postgresql
                     , stm
                     , stm-containers
                     , transformers
                     , wai
                     , wai-app-static
                     , wai-extra
                     , warp
