name:                hauth
version:             0.1.0
synopsis:            Header Authentication Library
description:         Hash-Based Message Authentication Code Library based on
                     OAuth2 & https://confluence.amgencss.fpcomplete.com/x/lwAQ
homepage:            http://github.com/fpco/hauth
license:             MIT
license-file:        LICENSE
author:              Tim Dysinger
maintainer:          tim@fpcomplete.com
copyright:           FP Complete
category:            Network
build-type:          Simple
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  exposed-modules:     Network.HAuth
                       Network.HAuth.Auth
                       Network.HAuth.Consul
                       Network.HAuth.Parse
                       Network.HAuth.Postgres
                       Network.HAuth.Types
                       Network.HAuth.Types.Account
                       Network.HAuth.Types.Auth
                       Network.HAuth.Types.JSON
  hs-source-dirs:      src
  build-depends:       aeson
                     , attoparsec
                     , base >=4.7 && <5
                     , byteable
                     , bytestring
                     , consul-haskell
                     , containers
                     , cryptohash
                     , enclosed-exceptions
                     , hashable
                     , http-types
                     , lifted-base
                     , monad-control
                     , monad-logger-json-extra
                     , mtl
                     , network
                     , persistent
                     , persistent-postgresql
                     , persistent-template
                     , resource-pool
                     , stm
                     , stm-containers
                     , text
                     , time
                     , transformers
                     , uuid
                     , void
                     , wai
                     , wai-extra

test-suite test-hauth
  default-language:    Haskell2010
  hs-source-dirs:      tests
  main-is:             Main.hs
  type:                exitcode-stdio-1.0
  build-depends:       base >=4.7 && <5
                     , hauth
                     , hspec
                     , hspec-attoparsec
                     , tasty
                     , tasty-hspec
                     , text
