name:                hauth-bin
version:             0.1.0
synopsis:            Header Authentication Library (Example Tools)
description:         Hash-Based Message Authentication Code Example based on
                     OAuth2 & https://confluence.amgencss.fpcomplete.com/x/lwAQ
homepage:            http://github.com/fpco/hauth
license:             MIT
license-file:        LICENSE
author:              Tim Dysinger
maintainer:          tim@fpcomplete.com
copyright:           FP Complete
category:            Network
build-type:          Simple
cabal-version:       >=1.10

executable hauth-server
  default-language:    Haskell2010
  hs-source-dirs:      src/server
  main-is:             Main.hs
  build-depends:       async
                     , base >=4.7 && <5
                     , bytestring
                     , consul-haskell
                     , hauth
                     , http-types
                     , monad-control
                     , monad-logger
                     , network
                     , persistent
                     , persistent-postgresql
                     , stm
                     , stm-containers
                     , text
                     , transformers
                     , wai
                     , wai-extra
                     , warp

executable hauth-client
  default-language:    Haskell2010
  hs-source-dirs:      src/client
  main-is:             Main.hs
  build-depends:       base >=4.7 && <5
                     , bytestring
                     , cabal-file-th
                     , hauth
                     , http-types
                     , lens
                     , optparse-applicative
                     , template-haskell
                     , text
                     , time
                     , uri-bytestring
                     , uuid
                     , wreq
